src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/NonConventionalFQCN2/UnexpectedBundleClassName.php
<?php

namespace Invalid\NonConventionalFQCN2;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

class UnexpectedBundleClassName extends ClarolineExtension
{
    /**
     * Invalid because the class name is not the concatenation of the vendor and bundle names
     */
}